# moneycalcbase

./: .gitignore  Cargo.toml  readme.md
.ra_target/: .rustc_info.json
.ra_target/debug/.fingerprint/allocator-api2-2768a3745864b17e/: lib-allocator_api2  lib-allocator_api2.json
.ra_target/debug/.fingerprint/allocator-api2-3d50966576ccee68/: lib-allocator_api2  lib-allocator_api2.json
.ra_target/debug/.fingerprint/allocator-api2-885dc21dacd73f79/: lib-allocator_api2  lib-allocator_api2.json
.ra_target/debug/.fingerprint/allocator-api2-a22f0c0335f16551/: lib-allocator_api2  lib-allocator_api2.json
.ra_target/debug/.fingerprint/allocator-api2-a3943f72dc59f3d7/: lib-allocator_api2  lib-allocator_api2.json
.ra_target/debug/.fingerprint/allocator-api2-f21c861a1094a182/: lib-allocator_api2  lib-allocator_api2.json
.ra_target/debug/.fingerprint/atoi-01b5c113597a24ba/: lib-atoi  lib-atoi.json
.ra_target/debug/.fingerprint/atoi-0e5d94862fccb0d5/: lib-atoi  lib-atoi.json
.ra_target/debug/.fingerprint/atoi-5784571e232de180/: lib-atoi  lib-atoi.json
.ra_target/debug/.fingerprint/atoi-ecefa1673a3898ba/: lib-atoi  (+1 more)
src/: lib.rs  main.rs
src/commands/accounts/: addaccountcommand.rs  mod.rs
src/commands/users/: addusercommand.rs  mod.rs
src/config/: mod.rs
src/models/: account.rs  mod.rs  moneytransaction.rs  record.rs  user.rs
src/providers/: mod.rs
src/providers/bases/: sqlite.rs
src/storages/: mod.rs  moneystorage.rs  storagecreator.rs
src/stores/: mod.rs  moneystorage.rs
testbases/: testbase_accounts.db3  testbase_mig.db3  testbase_user.db3
(+1490 files in other folders)
